--- a/index.html
+++ b/index.html
@@ -27,19 +27,19 @@
             </div>
             <div class="goalContainer">
                 <div class="customCheckbox">
-                    <img class="hide" src="./check-icon.svg" alt="">
+                    <img class="hide hide1" src="./check-icon.svg" alt="">
                 </div>
                 <input class="goal_input" type="text" name="" id="" placeholder="Add new goal...">
             </div>
             <div class="goalContainer">
                 <div class="customCheckbox">
-                    <img class="hide" src="./check-icon.svg" alt="">
+                    <img class="hide hide1" src="./check-icon.svg" alt="">
                 </div>
                 <input class="goal_input" type="text" name="" id="" placeholder="Add new goal...">
             </div>
             <div class="goalContainer">
                 <div class="customCheckbox">
-                    <img class="hide" src="./check-icon.svg" alt="">
+                    <img class="hide hide1" src="./check-icon.svg" alt="">
                 </div>
                 <input class="goal_input" type="text" name="" id="" placeholder="Add new goal...">
             </div>
